main/dns-root-hints: refactor

--- a/main/dns-root-hints/APKBUILD
+++ b/main/dns-root-hints/APKBUILD
@@ -3,7 +3,7 @@
 # Maintainer: tcely <dnshints-root+aports@tcely.33mail.com>
 pkgname=dns-root-hints
 pkgver=2019031302
-pkgrel=0
+pkgrel=1
 pkgdesc="The DNS root hint(s)"
 url="https://www.internic.net/domain"
 arch="noarch"
@@ -13,27 +13,34 @@ options="net"
 source="verisign-grs-nstld-key.asc named.root named.root.sig"
 builddir="$srcdir/$pkgname-$pkgver"
 
-build() {
-	mkdir -p "$builddir"
+_check_sig() {
+	local GNUPGHOME="$builddir/.gpg"
+	install -d -m 0700 "$GNUPGHOME"
+	gpg --import < "$srcdir"/verisign-grs-nstld-key.asc
+	gpg --verify "${_tmp}"/named.root.sig "${_tmp}"/named.root
+	rm -rf "$GNUPGHOME"
+	mv "${_tmp}"/named.root.sig "${_tmp}"/named.root "$builddir"/
 }
 
-package() {
-	cd "$builddir"
-	install -D -m 644 -o root -g root "$srcdir"/named.root \
-		"$pkgdir"/usr/share/$pkgname/named.root
-	install -D -m 644 -o root -g root "$srcdir"/named.root.sig \
-		"$pkgdir"/usr/share/$pkgname/named.root.sig
-	install -D -m 644 -o root -g root "$srcdir"/verisign-grs-nstld-key.asc \
-		"$pkgdir"/usr/share/$pkgname/verisign-grs-nstld-key.asc
+_fetch_new_version() {
+	local _tmp="$(mktemp -d -p .)"
+	cd "${_tmp}"
+	curl -sSRLO "$url/named.root{.sig,}"
+	cd -
+	_check_sig
+	rm -rf "${_tmp}"
+}
 
-	# compatibility links
-	cd "$pkgdir/usr/share/$pkgname"
-	ln -s named.root named.cache
-	ln -s named.root db.cache
+build() {
+	mkdir -p "$builddir"
+	cd "$builddir"
+
+	_fetch_new_version
+
+	sed -e 's/[[:space:]]\+$//' named.root > root-ns.hints
 }
 
 check() {
-	cd "$builddir"
 	local _awkprog='
 		/related version of root zone:/ {
 			rootver=$NF;
@@ -45,40 +52,42 @@ check() {
 			printf "OK: %s\n", rootver;
 			quit;
 		}'
-	awk -v pkgver="$pkgver" "$_awkprog" "$srcdir"/named.root
+	awk -v pkgver="$pkgver" "$_awkprog" named.root
+}
+
+package() {
+	install -D -m 644 -o root -g root named.root \
+		"$pkgdir"/usr/share/$pkgname/named.root
+	install -D -m 644 -o root -g root named.root.sig \
+		"$pkgdir"/usr/share/$pkgname/named.root.sig
+	install -D -m 644 -o root -g root "$srcdir"/verisign-grs-nstld-key.asc \
+		"$pkgdir"/usr/share/$pkgname/verisign-grs-nstld-key.asc
+
+	# install our cleaned up hints file
+	install -D -m 644 -o root -g root root-ns.hints \
+		"$pkgdir"/usr/share/$pkgname/root-ns.hints
+
+	# compatibility links
+	cd "$pkgdir/usr/share/$pkgname"
+	ln -s named.root named.cache
+	ln -s named.root db.cache
 }
 
 # check new versions of root hints and commit
 snapshot() {
-	# use a temporary dir for new files
-	export _tmp=$(mktemp -d -p .)
-	for file in named.root named.root.sig; do
-		curl -sLR "${url}/${file}" -o "${_tmp}/${file}"
-	done
+	cd "$builddir"
 
-	# compare new and current versions
-	local _drh_new_ver=$(grep "related version of root zone:" ${_tmp}/named.root | egrep -o '[0-9]{10}')
-	local _drh_current_ver=$(grep "related version of root zone:" named.root | egrep -o '[0-9]{10}')
+	local _drh_current_ver="$(awk '/related version of root zone:/ { print $NF; quit; }' "$srcdir"/named.root)"
+
+	_fetch_new_version
+
+	local _drh_new_ver="$(awk '/related version of root zone:/ { print $NF; quit; }' named.root)"
 
 	# commit if new version is found
 	if [ "$_drh_new_ver" != "$_drh_current_ver" ]; then
-		check_sig
-		mv ${_tmp}/named.root named.root
-		mv ${_tmp}/named.root.sig named.root.sig
 		git add named.root named.root.sig
 		abump $pkgname-$_drh_new_ver
 	fi
-
-	# cleanup
-	rm "${_tmp}"/* || true
-	rmdir "${_tmp}"
-}
-
-check_sig() {
-	local GNUPGHOME="$builddir/.gpg"
-	install -d -m 0700 "$GNUPGHOME"
-	gpg --import < verisign-grs-nstld-key.asc
-	gpg --verify "${_tmp}/named.root.sig" "${_tmp}/named.root"
 }
 
 sha512sums="3ecf5d66e506526ad98ea0b371202f0763b987322bd4407b40fcd95415202bddb18fd06c82eb397566b393e214dc88cb17ec94f3908328e8a55f5f68cc730993  verisign-grs-nstld-key.asc
