main/dns-root-hints: do not commit hints
This lets the hints data rot in our source control repository.

We want check to fail stale data, not checksum errors.

--- a/main/dns-root-hints/APKBUILD
+++ b/main/dns-root-hints/APKBUILD
@@ -10,7 +10,7 @@ arch="noarch"
 license="Public-Domain"
 makedepends="curl gnupg"
 options="net"
-source="verisign-grs-nstld-key.asc named.root named.root.sig"
+source="verisign-grs-nstld-key.asc"
 builddir="$srcdir/$pkgname-$pkgver"
 
 _check_sig() {
@@ -73,23 +73,4 @@ package() {
 	ln -s named.root db.cache
 }
 
-# check new versions of root hints and commit
-snapshot() {
-	cd "$builddir"
-
-	local _drh_current_ver="$(awk '/related version of root zone:/ { print $NF; quit; }' "$srcdir"/named.root)"
-
-	_fetch_new_version
-
-	local _drh_new_ver="$(awk '/related version of root zone:/ { print $NF; quit; }' named.root)"
-
-	# commit if new version is found
-	if [ "$_drh_new_ver" != "$_drh_current_ver" ]; then
-		git add named.root named.root.sig
-		abump $pkgname-$_drh_new_ver
-	fi
-}
-
-sha512sums="3ecf5d66e506526ad98ea0b371202f0763b987322bd4407b40fcd95415202bddb18fd06c82eb397566b393e214dc88cb17ec94f3908328e8a55f5f68cc730993  verisign-grs-nstld-key.asc
-ad14d7b6c6c52ebdd6c21448aa79d0560701df3b92576fab7ed1611314a5279e317dcfbcb05f2f2cb9d9b0a8932f56e6a03c7a52709fc75929d568267aa64f8b  named.root
-774ac61ee930611a1876447c981e20f0340ad25c49703b2d068164a681c3d5bac8f5c8f6fc0a4ba98e04d9aa4b922d4ea8936029cf2336b94e7cd6588ee6ba69  named.root.sig"
+sha512sums="3ecf5d66e506526ad98ea0b371202f0763b987322bd4407b40fcd95415202bddb18fd06c82eb397566b393e214dc88cb17ec94f3908328e8a55f5f68cc730993  verisign-grs-nstld-key.asc"
