--- a/testing/knot-resolver4/APKBUILD
+++ b/testing/knot-resolver4/APKBUILD
@@ -11,9 +11,9 @@ license="GPL-3.0"
 pkgusers="kresd"
 pkggroups="kresd"
 depends="dns-root-hints dnssec-root lua5.1-sec lua5.1-socket"
-_depends_dnstap_dev="fstrm-dev protobuf-dev protobuf-c-dev"
-_depends_http="$pkgname lua5.1-http"
-depends_dev="knot-dev>=2.8.0 libedit-dev libuv-dev>=1.7 lmdb-dev luajit-dev>=2.0 $_depends_dnstap_dev"
+depends_dnstap_dev="fstrm-dev protobuf-dev protobuf-c-dev"
+depends_http="$pkgname lua5.1-http"
+depends_dev="knot-dev>=2.8.0 libedit-dev libuv-dev>=1.7 lmdb-dev luajit-dev>=2.0 $depends_dnstap_dev"
 makedepends="$depends_dev bash cmake gnutls-dev luacheck meson>=0.46 ninja pkgconf py-flake8"
 checkdepends="cmocka-dev"
 install="$pkgname.pre-install"
@@ -64,7 +64,7 @@ package() {
 
 http() {
 	pkgdesc="Knot Resolver - HTTP/2 services"
-	depends="$_depends_http"
+	depends="$depends_http"
 	local moddir="usr/lib/knot-resolver/kres_modules"
 
 	mkdir -p "$subpkgdir"/$moddir
