--- a/main/ninja/APKBUILD
+++ b/main/ninja/APKBUILD
@@ -17,7 +17,7 @@ source="
 builddir="$srcdir"/${pkgname}-${pkgver}
 
 _py3_sitelib() {
-    python3 -c "import site; print(site.getsitepackages()[0])"
+    python3 -c 'import sysconfig; print(sysconfig.get_path("platlib"))'
 }
 
 build() {
