--- a/testing/openresty/APKBUILD
+++ b/testing/openresty/APKBUILD
@@ -3,13 +3,14 @@
 pkgname=openresty
 pkgver="1.15.8.1"
 _rc=
-pkgrel=5
+pkgrel=6
 pkgdesc="Scalable Web Platform by Extending NGINX with LuaJIT"
 url="https://openresty.org/"
 arch="all !ppc64le" # LuaJIT build errors
 license="BSD-2-Clause"
 options="!check" # tests environment not available
-provides="cmd:nginx"
+_provide="cmd:nginx"
+provides="$_provide"
 depends="!nginx $pkgname-luajit>=$pkgver-r$pkgrel"
 depends_luajit="!luajit"
 makedepends="linux-headers gd-dev geoip-dev openssl-dev libxml2-dev libxslt-dev
@@ -139,7 +140,7 @@ _module() {
 	local _deps="$(eval echo "\$_module_${name//-/_}_deps")"
 
 	pkgdesc="$pkgdesc (module $soname)"
-	depends="cmd:nginx${_deps:+ }${_deps}"
+	depends="${_provide}${_deps:+ }${_deps}"
 	provides=""
 
 	mkdir -p "${subpkgdir}${_modules_dir}"
